--- a/sofiacss.css
+++ b/sofiacss.css
@@ -1,3 +1,27 @@
+
+@font-face {
+  font-family: 'apercumedium';
+  font-style: normal;
+  font-weight: normal;
+  src: url('./fonts/apercu_medium-webfont.eot');
+  src: url('./fonts/apercu_medium-webfont.eot?#iefix') format('embedded-opentype'),
+ url('./fonts/apercu_medium-webfont.woff') format('woff'),
+ url('./fonts/apercu_medium-webfont.ttf') format('truetype'),
+ url('./fonts/apercu_medium-webfont.svg#apercu_mediumregular') format('svg');
+  }
+
+@font-face {
+  font-family: 'apercu';
+  font-style: normal;
+  font-weight: normal;
+  src: url('./fonts/apercu_regular-webfont.eot');
+  src: url('./fonts/apercu_regular-webfont.eot?#iefix') format('embedded-opentype'),
+ url('./fonts/apercu_regular-webfont.woff') format('woff'),
+ url('./fonts/apercu_regular-webfont.ttf') format('truetype'),
+ url('./fonts/apercu_regular-webfont.svg#apercuregular') format('svg');
+  }
+
+
 html { 
   background: url(images/bg.jpg) no-repeat center center fixed; 
   -webkit-background-size: cover;
@@ -16,7 +40,7 @@ html {
 }
 
 p {
-  font-family: apercu;
+  font-family: "apercu", 'Helvetica Neue', "Arial", sans-serif;
   line-height: 20px;
   color: #fff;
 }
